--- a/style.css
+++ b/style.css
@@ -1,1 +1,22 @@
-/* Start coding here */
+* {
+	margin: 0px;
+}
+
+section {
+	width: 100vw;
+	height: 100vh;
+	background: linear-gradient(45deg, hsl(0, 100%, 70%), hsl(240, 100%, 70%));
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+.wellcom-css {
+	background: hsla(0, 50%, 100%, 0.5);
+	width: 40%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+}
