--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
 }
 body {
-    height: 100%;
+    height: 100vh;
     margin: 0;
     display: flex;
     justify-content: center;
@@ -17,7 +17,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
 }
 
 .card {
@@ -32,4 +31,10 @@ body {
 h1 {
     font-size: 24px;
     font-weight: bold;
+    margin-bottom: 20px;
+}
+
+p {
+    font-size: 16px;
+    margin-bottom: 20px;
 }
