--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
 }
 body {
-    height: 100%;
+    height: 100vh;
     margin: 0;
     display: flex;
     justify-content: center;
@@ -17,13 +17,12 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
 }
 
 .card {
     background: hsla(0, 50%, 100%, 0.5);
     padding: 20px;
-    border-radius: 10px;
+    border-radius: 5px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     text-align: center;
     max-width: 470px;    
@@ -32,4 +31,10 @@ body {
 h1 {
     font-size: 24px;
     font-weight: bold;
+    margin-bottom: 20px;
+}
+
+p {
+    font-size: 16px;
+    margin-bottom: 20px;
 }
